--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -1,5 +1,6 @@
 .Info {
-  border: 1px solid black;
+  border: 8px solid rgb(176, 176, 176);
+  border-radius: 0.5rem;
   width: 20rem;
   height: 30rem;
   margin: 1rem;
@@ -7,6 +8,7 @@
   justify-content: center;
   overflow-y: auto;
   overflow-x: hidden;
+  background-color: white;
 }
 
 .PokemonName {
