--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,10 +1,12 @@
 .List {
-  border: 1px solid black;
+  border: 8px solid rgb(176, 176, 176);
+  border-radius: 0.5rem;
   width: 20rem;
   height: 30rem;
   margin: 1rem;
   overflow-y: auto;
   overflow-x: hidden;
+  background-color: white;
 }
 
 .NotFound {
